WIP. Small start on data structures. Not very sure yet about lexing, parsing. Probably best to do both in single step.

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,8 @@ ifeq ($(PLATFORM),)
 	PLATFORM=POSIX
 	EXE_EXT=.elf
 	LIB_EXT=.so
-	PLATFORM_LDFLAGS= -lpthread -ldl
+	PLATFORM_LDFLAGS= -L$(HOME)/lib -lpthread -ldl
+	PLATFORM_CFLAGS=-I$(HOME)/include
 endif
 
 
@@ -112,10 +113,10 @@ COMMONFLAGS=\
 	-DBABYLON_TEXT_VERSION='"$(VERSION)"'\
 	$(PLATFORM_CFLAGS)
 
-CFLAGS=$(COMMONFLAGS)
+CFLAGS=$(COMMONFLAGS) -std=c99
 CXXFLAGS=$(COMMONFLAGS) -std=c++x11
 LD=$(GCC)
-LDFLAGS= -lpq -lm $(PLATFORM_LDFLAGS)
+LDFLAGS= -lm $(PLATFORM_LDFLAGS) -lds
 AR=ar
 ARFLAGS= rcs
 
